Use Byte.valueOf instead of new Byte